Arreglado recalcular camino con incidencia, modificado mostrar camino, agregadas flechas en caminos y camino reemplazado mostrado en rojo